[WIT-144] Porting to V2 API
